--- a/style.css
+++ b/style.css
@@ -5,12 +5,14 @@
 }
 body {
   font-family: "Work Sans", sans-serif;
+  width: 100%;
 }
-header {
+.wrapper {
+  margin: 0 auto;
   width: 1050px;
   max-width: 1050px;
-  margin: 0 auto;
 }
+
 .header-container {
   display: flex;
   justify-content: space-between;
@@ -61,23 +63,18 @@ ul li {
 }
 
 /****/
-.banner-section {
-  width: 1050px;
-  max-width: 1050px;
-  margin: 0 auto;
-}
+
 .banner-container {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 .banner-img {
-  width: 70%;
-  position: relative;
+  width: 500px;
 }
 .banner-img img {
   width: 100%;
-  height: 600px;
+  height: 500px;
 }
 
 .b_color {
@@ -119,9 +116,6 @@ ul li {
 /**/
 .know-section {
   padding: 80px 0;
-  width: 1050px;
-  max-width: 1050px;
-  margin: 0 auto;
 }
 .know-container {
   display: flex;
@@ -165,9 +159,6 @@ ul li {
 /**/
 .games-section {
   padding-top: 20px;
-  width: 1050px;
-  max-width: 1050px;
-  margin: 0 auto;
 }
 .games-container {
   text-align: center;
@@ -199,9 +190,8 @@ ul li {
 /**/
 .anniversary-section {
   padding-top: 70px;
-  margin: 0 auto;
-  width: 1050px;
-  max-width: 1050px;
+  padding-bottom: 100px;
+  height: auto;
 }
 .anniversary-container {
   display: flex;
@@ -227,136 +217,33 @@ ul li {
 }
 .ani-img {
   position: relative;
-  width: 700px;
-  height: 700px;
+  width: 80%;
+  height: 600px;
 }
 
 .ani-img img {
   position: absolute;
 }
 .image1 {
-  width: 550px;
+  width: 500px;
   z-index: 1;
 }
 .image2 {
-  bottom: 40px;
+  bottom: -50px;
   left: -100px;
-  width: 200px;
+  width: 150px;
   z-index: 3;
 }
-
-/**/
-.anid-section {
-  padding: 50px 0;
-}
-.anid-container {
-  margin: 0 auto;
-  width: 1050px;
-  max-width: 1050px;
-  display: flex;
-  align-items: center;
-}
-
-.anid-img {
-  width: 700px;
-  height: 700px;
-}
-
-.anid-img1 {
-  width: 550px;
-  /* z-index: 1; */
-}
-.anid-img2 {
-  /* bottom: 40px;
-  right: -160px; */
-  width: 200px;
-  margin-left: -110px;
-  margin-bottom: -100px;
-  /* z-index: 3; */
-}
-.anid-tx {
-  width: 400px;
-}
-
-.play-text2 {
-  width: 80%;
-  font-size: 27px;
-  font-weight: 900;
-  background: linear-gradient(180deg, #f948b2 0%, #8758f1 100%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  padding-left: 25px;
-}
-.play-para2 {
-  padding-top: 20px;
-  padding-left: 25px;
-}
-
-/**/
-.careers-section {
-  background: linear-gradient(180deg, #f948b2 0%, #8758f1 100%);
-
-  padding: 50px 0;
-}
-.careers-container {
-  margin: 0 auto;
-  width: 1050px;
-  max-width: 1050px;
-  display: flex;
-  align-items: center;
-  gap: 30px;
-}
-.careers-info {
-  width: 50%;
-}
-.careers-info h3 {
-  font-size: 35px;
-  color: white;
-  margin-bottom: 10px;
-}
-.wt {
-  color: rgba(255, 255, 255, 0.815);
-}
-.careers-op {
-  color: rgb(255, 255, 255);
-  font-weight: bold;
-}
-.posi-btn {
-  padding: 15px 35px;
-  border: none;
-  border-radius: 10px;
-  color: rgb(182, 33, 208);
-}
-.careers-img {
-  width: 70%;
-}
-.careers-img img {
-  width: 100%;
-}
-.careers-op {
-  display: flex;
-  gap: 30px;
-
-  padding: 10px 0;
-}
-
-/**/
 .allgames-section {
   padding: 100px 0;
-}
-.allgames-container {
-  margin: 0 auto;
-  width: 1050px;
-  max-width: 1050px;
 }
 
 .allgames-cards {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-
+  grid-template-columns: repeat(3, 25%);
   justify-items: center;
-  gap: 35px;
+  gap: 20px;
+  justify-content: center;
 }
 .allgame-card {
   display: flex;
@@ -373,14 +260,11 @@ ul li {
 /**/
 
 footer {
-  background-color: rgb(0, 0, 0);
   color: white;
 }
 .footer-container {
   padding: 140px 100px;
-  margin: 0 auto;
-  width: 1050px;
-  max-width: 1050px;
+  background-color: rgb(0, 0, 0);
 }
 .footer-nav {
   padding: 50px 0;
