--- a/style.css
+++ b/style.css
@@ -59,7 +59,10 @@ header {
 }
 
 .banner-left {
-  width: 20%;
+  width: 25%;
+}
+.banner-left p{
+  margin-bottom: 5px;
 }
 .banner-heading {
   font-size: 36px;
@@ -86,8 +89,8 @@ header {
 /*wegamersection*/
 .wearegamer-container {
   display: flex;
+  justify-content: space-between;
   align-items: center;
-
   padding-left: 100px;
   padding-right: 100px;
 }
@@ -95,18 +98,36 @@ header {
   width: 100%;
 }
 .weright {
-  width: 50%;
+  width: 30%;
   text-align: right;
 }
-
+.weright h2{
+  font-size: 35px;
+  background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.weright button{
+  padding: 10px 30px;
+  border: none;
+  background-color: rgb(160, 16, 150);
+  color: white;
+  font-weight: bold;
+}
 /*video-section*/
 
 .video-container {
-  padding-left: 100px;
-  padding-right: 100px;
+  padding: 50px 100px;
 }
 .video-heading {
   text-align: center;
+  padding-bottom: 40px;
+}
+.video-heading h3{
+  margin-bottom: 10px;
+  font-size: 35px;
+  font-weight: 900;
 }
 .video-cards {
   display: flex;
@@ -114,15 +135,42 @@ header {
 }
 .video-card {
   width: 19%;
+  
+}
+.video-img{
+  position: relative;
+}
+.video-img .card-img {
+  width: 250px;
+  display: block;
+  position: relative;
+}
+.image-overley {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 16px;
+  font-size: 16px;
+  color: #ff109f;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: linear-gradient( 0deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.6) 100% ), lightgray 50%;
+  opacity: 0;
+  transition: opacity 0.25s;
+}
+.image-overley:hover {
+  opacity: 85%;
 }
 
-.video-img img {
-  width: 250px;
-}
+
 
 /*play-section*/
 .play-container {
-  padding: 0 100px;
+  padding: 50px 100px;
   display: flex;
   align-items: center;
 
@@ -130,6 +178,13 @@ header {
 }
 .play-left {
   width: 20%;
+}
+.play-left h3{
+  font-size: 35px;
+  background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 .banner-right {
   width: 60%;
@@ -142,24 +197,77 @@ header {
   position: relative;
 }
 .play-right .img2 {
-  width: 20%;
+  width: 30%;
   position: absolute;
-  bottom: -30px;
-  left: -35px;
+  bottom: -40px;
+  left: -50px;
 }
 
 /*allgames-section*/
 .allgames-container {
-  padding: 100px 100px 20px 100px;
+  padding: 100px 100px;
 }
 .allgames-cards {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   justify-items: center;
-  gap: 20px;
+  gap: 30px;
 }
 .allgame-card {
   display: flex;
   align-items: center;
   gap: 20px;
+  border-radius: 30px;
+  font-weight: 900;
+}
+.allgame-card:hover{
+outline: 2px solid rgb(196, 18, 169);
+color: rgb(198, 24, 187);
+
+}
+/*footer*/
+footer {
+  background-color: black;
+  color: white;
+  text-align: center;
+}
+.footer-container {
+  padding: 100px;
+}
+.footer-logo {
+  justify-content: center;
+}
+.footer-nav {
+  padding: 50px 0;
+}
+.footer-nav ul {
+  display: grid;
+  width: 70%;
+  margin: auto;
+  grid-template-columns: repeat(6, 1fr);
+  justify-items: center;
+  gap: 5px;
+  font-weight: bold;
+}
+.footer-icon {
+  width: 50%;
+  margin: auto;
+}
+.footer-icon ul {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  align-items: center;
+  gap: 20px;
+}
+.footer-policy {
+  display: grid;
+  width: 70%;
+  margin: auto;
+  grid-template-columns: repeat(4, 1fr);
+  justify-items: center;
+  padding: 30px 0;
+  gap: 5px;
+}
+.footer-policy p {
+  font-size: 14px;
 }
