few changes added

--- a/responsive.css
+++ b/responsive.css
@@ -1,5 +1,8 @@
 @media only screen and (max-width: 665px) {
   /*header*/
+  .header-section {
+    padding-bottom: 20px;
+  }
   .header-container {
     flex-direction: column;
     align-items: center;
@@ -9,10 +12,14 @@
 
   .nav {
     flex-direction: column;
+    gap: 30px;
     align-items: center;
   }
 
   /*banner*/
+  .banner-section {
+    padding-bottom: 50px;
+  }
   .banner-container {
     flex-direction: column-reverse;
     gap: 40px;
@@ -21,9 +28,17 @@
 
   .banner-left {
     width: 70%;
+    text-align: center;
+  }
+
+  .banner-right {
+    width: 95%;
   }
 
   /*wegamersection*/
+  .wearegamer-section {
+    padding-bottom: 50px;
+  }
   .wearegamer-container {
     flex-direction: column;
     gap: 40px;
@@ -36,6 +51,9 @@
   }
   /*videosection*/
 
+  .video-section {
+    padding-bottom: 40px;
+  }
   .video-container {
     padding: 0 10px;
   }
@@ -45,6 +63,10 @@
   }
   .video-card {
     width: 90%;
+    padding-bottom: 20px;
+  }
+  .video-img .card-img {
+    width: 100%;
   }
   .video-img img {
     width: 100%;
@@ -58,8 +80,9 @@
   .play-left {
     width: 100%;
     text-align: center;
+    padding-bottom: 30px;
   }
- 
+
   .play-right {
     width: 80%;
   }
@@ -79,6 +102,11 @@
   }
   .allgames-cards {
     grid-template-columns: repeat(2, 1fr);
+    gap: 5px;
+  }
+  .allgame-card {
+    font-weight: normal;
+    gap: 5px;
   }
   /*footer*/
   .footer-container {
